# saga-order-service/src/main/java/br/com/vnrg/sagaorderservice/controller/OrderController.java
@@ -1,23 +1,33 @@
 package br.com.vnrg.sagaorderservice.controller;
 
 import br.com.vnrg.sagaorderservice.openapi.api.OrderApi;
+import br.com.vnrg.sagaorderservice.openapi.model.ModelApiResponse;
 import br.com.vnrg.sagaorderservice.openapi.model.Order;
-import com.github.javafaker.Faker;
+import br.com.vnrg.sagaorderservice.service.OrderService;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.LocalDateTime;
-
 @RestController
-public class OrderController implements OrderApi {
+@Slf4j
+class OrderController implements OrderApi {
 
-    public ResponseEntity<Order> getOrderById(Long orderId) {
-        var faker = new Faker();
-        var order = new Order();
-        order.setId(faker.random().nextLong());
-        order.setOrderId(faker.random().nextLong());
-        order.setQuantity(faker.hashCode());
-        order.setOrderDate(LocalDateTime.now());
-        return ResponseEntity.ok(order);
+    private final OrderService service;
+
+    OrderController(OrderService service) {
+        this.service = service;
+    }
+
+    @Override
+    public ResponseEntity<ModelApiResponse> addOrder(Order order) {
+        log.info("addOrder {}", order.toString());
+        this.service.createOrder(order);
+
+        var response = new ModelApiResponse();
+        response.setCode(HttpStatus.ACCEPTED.value());
+        response.setMessage("Order Accepted");
+        response.setType("Success");
+        return ResponseEntity.ok(response);
     }
 }
