# saga-order-service/target/classes/api.yaml
@@ -22,33 +22,6 @@ tags:
 
 paths:
   /order:
-    put:
-      tags:
-        - order
-      summary: Update an existent Order
-      description: Update an existent Order by Id
-      operationId: updateOrder
-      requestBody:
-        description: Update an existent Order
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Order'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Order not found
-        '405':
-          description: Validation exception
-
     post:
       tags:
         - order
@@ -68,111 +41,66 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/ModelApiResponse'
         '405':
           description: Invalid input
-    get:
+        '500':
+          description: Internal server error
+    put:
       tags:
         - order
-      summary: Find all orders
-      description: Find all orders
-      operationId: findOrders
+      summary: Update an existent Order
+      description: Update an existent Order by Id
+      operationId: updateOrder
+      requestBody:
+        description: Update an existent Order
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Order'
+        required: true
       responses:
         '200':
-          description: successful operation
+          description: Successful operation
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
-        '400':
-          description: Invalid status value
-
-
-  /order/findByStatus:
-    get:
-      tags:
-        - order
-      summary: Finds Order by status
-      description: Multiple status values can be provided with comma separated strings
-      operationId: findOrdersByStatus
-      parameters:
-        - name: status
-          in: query
-          description: Status values that need to be considered for filter
-          required: false
-          explode: true
-          schema:
-            type: string
-            default: available
-            enum:
-              - pending
-              - processing
-              - completed
-              - error
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
-        '400':
-          description: Invalid status value
-
-  '/order/{orderId}':
-    get:
-      tags:
-        - order
-      summary: Find Order by ID
-      description: Returns a single order
-      operationId: getOrderById
-      parameters:
-        - name: orderId
-          in: path
-          description: ID of order to return
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/ModelApiResponse'
         '400':
           description: Invalid ID supplied
         '404':
           description: Order not found
+        '405':
+          description: Validation exception
+        '500':
+          description: Internal server error
 
+  '/order/{orderId}':
     delete:
       tags:
         - order
       summary: Deletes a Order
-      description: ''
+      description: Delete an existent Order by Id
       operationId: deleteOrder
       parameters:
-        - name: apiKey
-          in: header
-          description: ''
-          required: false
-          schema:
-            type: string
         - name: orderId
           in: path
           description: Order id to delete
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ModelApiResponse'
         '400':
-          description: Invalid Order value
+          description: Invalid Order Id
+        '500':
+          description: Internal server error
 
 
 components:
@@ -180,20 +108,32 @@ components:
     Order:
       type: object
       properties:
-        id:
+        orderType:
+          type: string
+          format: uuid
+        orderDescription:
+          type: string
+        orderValue:
+          type: number
+        productId:
+          type: string
+          format: uuid
+        productItems:
           type: integer
-          format: int64
-          example: 10
-        orderId:
-          type: integer
-          format: int64
-          example: 198772
-        quantity:
+          minimum: 1
+        productDescription:
+          type: string
+        customerId:
+          type: string
+          format: uuid
+
+    ModelApiResponse:
+      type: object
+      properties:
+        code:
           type: integer
           format: int32
-          example: 7
-        orderDate:
+        type:
           type: string
-          format: date-time
-      xml:
-        name: order
+        message:
+          type: string
